# ViLaIn-TAMP

./: .gitignore  Grounded Vision-Language Interpreter for Integrated Task and Motion Planning.html  README.md  pyproject.toml  requirements.txt  setup.py  template.yaml
data/domains/: domain_new.pddl
data/temp/: example_output.json  example_output.txt
data/vilain_tamp_data/cooking/: domain.pddl  stream.pddl
data/vilain_tamp_data/cooking/moving/bboxes/: problem1.json  problem10.json  problem2.json  problem3.json  problem4.json  problem5.json  problem6.json  problem7.json  problem8.json  problem9.json
data/vilain_tamp_data/cooking/moving/instructions/: problem10.txt  problem7.txt
data/vilain_tamp_data/cooking/moving/problems/: problem10.pddl  problem2.pddl  problem3.pddl  problem4.pddl  problem5.pddl  problem6.pddl  problem7.pddl  problem8.pddl  problem9.pddl
data/vilain_tamp_data/cooking/mtc_ablation_slicing_only/bboxes/: problem10.json  problem4.json
data/vilain_tamp_data/cooking/mtc_ablation_slicing_only/instructions/: problem1.txt  problem8.txt
data/vilain_tamp_data/cooking/reachability/bboxes/: problem1.json  (+3 more)
data/vilain_tamp_data/primary/cooking/: domain.pddl
scripts/: eval_primary.py  main.py  object_detection_test.py  run_primary.sh  test.py
src/: prompts.py  segment.py  vilain.py  vilain_utils.py
src/components/: authors.jsx  video.jsx
src/pages/: index.jsx
vilain/: __init__.py  prompts.py  prompts_cot.py  prompts_single_arm.py  segment.py  vilain.py  vilain_utils.py
vilain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+198 files in other folders)
